Fix #6349 - Double scrollbar in the composer (#6361)

--- a/src/sass/components/squire/squire.scss
+++ b/src/sass/components/squire/squire.scss
@@ -26,6 +26,7 @@
 .plaintext-editor {
     flex: 1;
     width: 100%;
+    height: 100%;
     box-sizing: border-box;
     z-index: 50;
     margin: 0;
